# gmarket_price_checker

./: .gitignore  .python-version  Dockerfile  Dockerfile_local  docker-deploy.py  docker_local_deploy.py  pyproject.toml
.cert/: SHNp4l3uv1VuzUn9KRSJR-XEL230s3In8fhYfVzLQyU  kl-GUMdmAnL18oQiXsruwi_9dMSh5PC72lYvA_9D74c  rXOCDEti8K_19GwkScdIzJQvPDgQ1XAIrhdesXTjEr0  z0PKWlczzA0rLlxYbfGnw4dNAUurF_YMaLd2G7Y0hDU
.config/: gmarket.nginx  gmarket_local.nginx  gunicorn.py  supervisord.conf  supervisord.nginx
app/: Beautiful Soup.ipynb  db.sqlite3
app/.ipynb_checkpoints/: Beautiful Soup-checkpoint.ipynb
app/config/: settings.py  urls.py
app/member/: forms.py  models.py  urls.py  views.py
app/member/migrations/: 0001_initial.py
app/shoppingList/: crawler.py  models.py  urls.py  views.py
app/shoppingList/migrations/: 0001_initial.py
app/static/css/: main.css
app/templates/: base.html
app/templates/members/: login.html  signup.html
app/templates/shop/: shoppingDetail.html  shoppingList.html
