[tool.poetry]
name = "gmarket_price_checker"
version = "0.1.0"
description = ""
authors = ["eqfwcev123 <dohyeonee95@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3"
djangorestframework = "^3.11.0"
notebook = "^6.0.3"
django-extensions = "^2.2.8"
gunicorn = "^20.0.4"
requests = "^2.22.0"
Pillow = "^7.0.0"
beautifulsoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
